# liko_mcrtc_interf_plugin

./: CMakeLists.txt  README.md  vcpkg.json
etc/: LikoMcrtcInterfPlugin.in.yaml
src/: LikoMcrtcInterfPlugin.cpp  LikoMcrtcInterfPlugin.h  low_pass_filter.hpp
tests/etc/: mc_rtc.yaml
